DownloadMap
maps kunnen nu dowloaden worden